[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Characters/logo-icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/wood bg 3.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Acreation-hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/fonts/Pangolin/Pangolin-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/findcat-hover.png" type="Texture" id=5]
[ext_resource path="res://MainLevels/Light/light-selection.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Acreation.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/wooden reg btn.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/wooden reg btn-hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/findcat.png" type="Texture" id=10]
[ext_resource path="res://Assets/FX/General 2 (setting) - The Happiest Day Ever Ver 3.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/UI/wooden fill.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1217, 432 )

[sub_resource type="DynamicFont" id=6]
size = 40
extra_spacing_top = 10
font_data = ExtResource( 4 )

[node name="light-selection" type="Control"]
anchor_right = 1.92
anchor_bottom = 1.08
margin_right = -1766.4
margin_bottom = -86.4
rect_pivot_offset = Vector2( 511.352, 176.836 )
focus_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -35.0

[node name="blackboard 2" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.992854, 0.819375 )
texture = ExtResource( 2 )

[node name="wooden fill" type="Sprite" parent="."]
position = Vector2( 960.324, 122.773 )
scale = Vector2( 0.525328, 0.525328 )
texture = ExtResource( 12 )

[node name="selection-intro" type="Node" parent="."]

[node name="CatBtn" type="TextureButton" parent="selection-intro"]
margin_left = 175.405
margin_top = 207.872
margin_right = 1629.4
margin_bottom = 1136.87
rect_scale = Vector2( 0.65, 0.65 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="selection-intro/CatBtn"]
visible = false
margin_left = 117.986
margin_top = 242.614
margin_right = 202.986
margin_bottom = 279.614
text = "Light"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizBtn" type="TextureButton" parent="selection-intro"]
margin_left = 913.198
margin_top = 212.467
margin_right = 3952.2
margin_bottom = 2151.47
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="selection-intro/QuizBtn"]
visible = false
margin_left = -14.7555
margin_top = 247.905
margin_right = 289.245
margin_bottom = 284.905
text = "Units of Measurements and Physical Quantities"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pagetitle" type="VBoxContainer" parent="selection-intro"]
margin_left = 490.0
margin_top = 90.0
margin_right = 1441.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="selection-intro/pagetitle"]
visible = false
margin_right = 951.0
margin_bottom = 86.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label" type="Label" parent="selection-intro/pagetitle"]
margin_right = 951.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "Light Games Selection"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 1542.12
margin_top = 81.0593
margin_right = 1759.12
margin_bottom = 167.059
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="." to="." method="_on_lightselection_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_lightselection_tree_exiting"]
[connection signal="finished" from="bgm" to="." method="_on_bgm_finished"]
[connection signal="pressed" from="selection-intro/CatBtn" to="." method="_on_CatBtn_pressed"]
[connection signal="pressed" from="selection-intro/QuizBtn" to="." method="_on_QuizBtn_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
